--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="algonquin.cst2335.isla0059">
+    <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
+    <uses-feature android:name="android.software.leanback" android:required="true"/>
+
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
+        android:banner="@drawable/sadiasbanner"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.SadiasAndroidLab">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <category android:name="android.intent.category.LEANBACK_LAUNCHER"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
